--- a/app/src/main/res/layout/activity_my_order_details.xml
+++ b/app/src/main/res/layout/activity_my_order_details.xml
@@ -7,6 +7,8 @@
     android:background="@color/colorOffWhite"
     tools:context=".activities.MyOrderDetailsActivity">
 
+
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar_my_order_details_activity"
         android:layout_width="match_parent"
@@ -29,8 +31,17 @@
             android:textStyle="bold" />
 
     </androidx.appcompat.widget.Toolbar>
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/swipeRefreshLayoutOrderDetails"
+        app:layout_constraintTop_toBottomOf="@id/toolbar_my_order_details_activity"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent">
+
 
     <ScrollView
+        android:id="@+id/orddetailsscrollview"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:fillViewport="true"
@@ -38,12 +49,15 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/toolbar_my_order_details_activity">
+        app:layout_constraintTop_toBottomOf="@id/swipeRefreshLayoutOrderDetails" >
+<!--        app:layout_constraintTop_toBottomOf="@id/toolbar_my_order_details_activity"-->
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
+
+
 
             <com.example.daveexpress.utils.MSPTextView
                 android:layout_width="match_parent"
@@ -135,6 +149,89 @@
                         android:textColor="@color/colorAccent"
                         android:textSize="@dimen/my_order_details_label_value_textSize" />
                 </LinearLayout>
+
+                <com.example.daveexpress.utils.MSPTextViewBold
+                    android:id="@+id/select_orderstatus_heading"
+                    android:layout_width="188dp"
+                    android:layout_height="27dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="0dp"
+                    android:text="@string/select_order_status"
+                    android:textColor="@color/colorSecondaryText"
+                    android:textSize="@dimen/et_textSize"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/til_product_quantity" />
+
+                <RadioGroup
+                    android:id="@+id/rg_orderstatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginEnd="2dp"
+                    android:orientation="horizontal"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@id/category_tv">
+
+                    <com.example.daveexpress.utils.MSPRadioButton
+                        android:id="@+id/rb_pending"
+                        android:layout_width="wrap_content"
+                        android:layout_height="35dp"
+                        android:layout_weight="0.3"
+                        android:background="@drawable/drawable_gender_tab_selector"
+                        android:button="@null"
+                        android:checked="true"
+                        android:gravity="center"
+                        android:text="@string/order_status_pending"
+                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
+                        android:textStyle="bold"/>
+
+                    <com.example.daveexpress.utils.MSPRadioButton
+                        android:id="@+id/rb_inprocess"
+                        android:layout_width="wrap_content"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
+                        android:layout_weight="0.3"
+                        android:background="@drawable/drawable_gender_tab_selector"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:text="@string/order_status_in_process"
+                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
+                        android:textStyle="bold"/>
+
+                    <com.example.daveexpress.utils.MSPRadioButton
+                        android:id="@+id/rb_delivered"
+                        android:layout_width="wrap_content"
+                        android:layout_height="35dp"
+                        android:layout_marginStart="@dimen/profile_radio_button_marginStartEnd"
+                        android:layout_weight="0.3"
+                        android:background="@drawable/drawable_gender_tab_selector"
+                        android:button="@null"
+                        android:gravity="center"
+                        android:text="@string/order_status_delivered"
+                        android:textColor="@drawable/drawable_gender_tab_text_color_selector"
+                        android:textStyle="bold"/>
+
+                </RadioGroup>
+
+                <com.example.daveexpress.utils.MSPButton
+                    android:id="@+id/btn_update_orderstatus"
+                    android:layout_width="200dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="0dp"
+                    android:background="@drawable/button_background"
+                    android:foreground="?attr/selectableItemBackground"
+                    android:gravity="center"
+                    android:paddingTop="@dimen/btn_padding"
+                    android:paddingBottom="@dimen/btn_padding"
+                    android:text="@string/btn_update_orderstatus"
+                    android:textColor="@android:color/white"
+                    android:textSize="@dimen/btn_textSize" />
             </LinearLayout>
 
             <com.example.daveexpress.utils.MSPTextView
@@ -352,6 +449,9 @@
                     android:textSize="@dimen/lbl_order_details_textSize" />
             </LinearLayout>
 
+
         </LinearLayout>
+
     </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
