--- a/app/src/main/res/layout/item_dashboard_layout.xml
+++ b/app/src/main/res/layout/item_dashboard_layout.xml
@@ -2,24 +2,48 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/relativelayout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="@dimen/item_dashboard_margin"
+    android:layout_margin="10dp"
     android:background="@drawable/item_dashboard_background"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="@dimen/item_dashboard_padding">
 
+
     <ImageView
         android:id="@+id/iv_dashboard_item_image"
         android:layout_width="match_parent"
         android:layout_height="@dimen/item_dashboard_image_height"
-        android:layout_margin="@dimen/item_dashboard_image_margin"
+        android:layout_marginStart="@dimen/item_dashboard_image_margin"
+        android:layout_marginTop="@dimen/item_dashboard_image_margin"
+        android:layout_marginEnd="@dimen/item_dashboard_image_margin"
+        android:layout_marginBottom="@dimen/item_dashboard_image_margin"
         android:background="@color/colorImageViewBackground"
         android:contentDescription="@string/content_description"
         android:minHeight="@dimen/item_dashboard_image_height"
         android:scaleType="fitXY"
         android:src="@drawable/davesplash" />
+
+    <com.example.daveexpress.utils.MSPTextView
+        android:id="@+id/tv_on_sale"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_above="@id/iv_dashboard_item_image"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/app_gradient_color_background"
+        android:gravity="left"
+        android:paddingStart="@dimen/item_address_type_paddingStartEnd"
+        android:paddingTop="@dimen/item_address_type_paddingTopBottom"
+        android:paddingEnd="@dimen/item_address_type_paddingStartEnd"
+        android:paddingBottom="@dimen/item_address_type_paddingTopBottom"
+        android:text="@string/on_sale"
+        android:textColor="@color/colorWhite"
+        android:textSize="@dimen/address_details_textSize"
+        android:textStyle="bold"
+        tools:text="@string/on_sale" />
 
     <View
         android:id="@+id/view_divider"
@@ -36,9 +60,9 @@
         android:background="@color/dashboard_item_details_bg"
         android:orientation="vertical"
         android:paddingStart="@dimen/dashboard_item_paddingStartEnd"
-        android:paddingTop="@dimen/dashboard_item_paddingTopBottom"
+        android:paddingTop="3dp"
         android:paddingEnd="@dimen/dashboard_item_paddingStartEnd"
-        android:paddingBottom="@dimen/dashboard_item_paddingTopBottom">
+        android:paddingBottom="18dp">
 
         <com.example.daveexpress.utils.MSPTextViewBold
             android:id="@+id/tv_dashboard_item_title"
@@ -49,14 +73,47 @@
             android:textStyle="bold"
             tools:text="Item Name" />
 
-        <com.example.daveexpress.utils.MSPTextView
-            android:id="@+id/tv_dashboard_item_price"
+        <LinearLayout
+            android:id="@+id/ll_prices"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+
+
+            <com.example.daveexpress.utils.MSPTextView
+                android:id="@+id/tv_dashboard_item_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/dashboard_item_price_marginTop"
+                android:textColor="@color/item_value_text_color"
+                android:textSize="@dimen/dashboard_item_textSize"
+                android:textStyle="bold"
+                tools:text="₦200.00" />
+
+            <com.example.daveexpress.utils.MSPTextView
+                android:id="@+id/tv_dashboard_item_sale_price"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="@dimen/dashboard_item_price_marginTop"
+                android:textColor="@color/item_value_text_color"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                tools:text="₦100.00" />
+
+
+        </LinearLayout>
+
+        <com.example.daveexpress.utils.MSPTextView
+            android:id="@+id/tv_percent_off"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/dashboard_item_price_marginTop"
-            android:textColor="@color/item_value_text_color"
-            android:textSize="@dimen/dashboard_item_textSize"
+            android:textColor="@color/colorPrimary"
+            android:textSize="13sp"
             android:textStyle="bold"
-            tools:text="₦100.00" />
+            tools:text="20% OFF" />
+
     </LinearLayout>
 </RelativeLayout>
