--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,7 +8,11 @@
     <color name="black">#FF000000</color>
     <color name="colorWhite">#FFFFFFFF</color>
     <color name="purple_normal">#A020F0</color>
-
+    <color name="red_300">#E57373</color>
+    <color name="red_400">#EF5350</color>
+    <color name="light_green_400">#9CCC65</color>
+    <color name="light_green_500">#8BC34A</color>
+    <color name="light_green_600">#7CB342</color>
     <color name="colorPrimary">#FF6200EE</color>
     <color name="colorPrimaryDark">#222934</color>
     <color name="colorAccent">#FF3700B3</color>
